# LinAlg

./: CMakeLists.txt  README.md
benchmarks/cpp/: CMakeLists.txt
benchmarks/cpp/src/: benchmarks.cpp  matrix_multiplications.h
lib/: CMakeLists.txt
lib/src/: matrix.cppm  matrix.h  tensor.cppm
performance/cpp/: CMakeLists.txt
performance/cpp/src/: lib_matrix.cpp  matrix_multiplications.h  matrix_performance.cpp
performance/python/: numpy_matrix.py
tests/: CMakeLists.txt
tests/src/: matrix_test.cpp  tensor_test.cpp  test_matrix.cpp
